--- a/index.html
+++ b/index.html
@@ -2,28 +2,28 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
 </head>
 <body>
-  <div class="my-class">
-    <p>Apenas um texto qualquer</p>
-    <div>
-        <button>Clique aqui</button>
-     </div>
-    <input type="text">
-</div>
-</body>
-</html>
   <header>
     <a href="/">Logo</a>
   </header>
   <section>
     <h1>Primeiro Commit </h1>
+    <div class="my-class">
+         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minus totam harum dolores aliquid. Fugiat, vel quas? Amet ad quia consectetur, nobis tenetur doloremque eos, nam voluptatibus consequatur, voluptatem consequuntur aut in asperiores. Provident ea praesentium sed magnam repellat, suscipit in. Corporis, id porro qui nobis, perferendis, beatae reprehenderit quidem similique eaque laborum minima. Velit, expedita placeat nam deleniti, amet a quidem ex neque quibusdam cumque blanditiis obcaecati voluptate eligendi voluptas repellat facilis, totam possimus. Voluptatem, vero? Voluptatibus quidem quisquam nihil at facilis, dolore impedit itaque? Obcaecati magni quod dolore soluta.</p>
+    </div>
   </section>
-  <footer>
-    <h1>footer</h1>
-  </footer>
+  <section>
+     <div>
+       <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repudiandae, tenetur? Rerum, debitis! Officia vitae, facere optio, iste quia commodi debitis odit incidunt eaque libero exercitationem cupiditate esse sequi! Repudiandae, repellat?     </p>
+    </div>
+    <h1>Deu Ruim</h1>
+  </section>
+  <header>
+    <h1>shuahsuafisuaishisadhiadshiisadhudiadsu</h1>
+  </header>
 </body>
 </html>
